--- a/app/src/main/res/layout/widget_stocks_list_item.xml
+++ b/app/src/main/res/layout/widget_stocks_list_item.xml
@@ -15,10 +15,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:layout_gravity="center|right"
+            android:layout_gravity="center|start"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@color/colorBlack"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="10dp"
             android:text="@string/example_stock_name"/>
 
         <TextView
